--- a/client/src/components/Home/index.scss
+++ b/client/src/components/Home/index.scss
@@ -1,28 +1,28 @@
 .map-container {
     width: 55%;
     max-height: 30rem;
-    border-style:solid;
     border-radius:15px;
 }
 .map-section {
     max-width:80rem;
-    border:solid;
+    
     max-height:30rem;
     margin:auto;
     border-radius:25px;
     display:flex;
     flex-direction: row;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     
 }
 .ptag2 {
     font-weight: 400;
+    margin:25px;
     
    
 }
 .ptag3 {
     font-weight: 400;
+    margin:25px;
 }
 
 
@@ -97,6 +97,7 @@ ul.no-bullets {
     align-items: center;
     font-size:18px;
     font-weight:600;
+    
 
 }
 .box-2 {
@@ -194,12 +195,12 @@ ul.no-bullets {
     flex-direction: row;
  
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1085px) {
     .ptag2 {
-        font-size:15px;
+        font-size:12px;
     }
     .ptag3 {
-        font-size:15px;
+        font-size:12px;
     }
     .stary {
         font-size:20px;
@@ -210,10 +211,10 @@ ul.no-bullets {
   }
   @media screen and (max-height: 850px) {
     .ptag2 {
-        font-size:15px;
+        font-size:12px;
     }
     .ptag3 {
-        font-size:15px;
+        font-size:12px;
     }
     .stary {
         font-size:20px;
@@ -229,7 +230,7 @@ ul.no-bullets {
   
  
   }
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 900px) {
     .ptag2 {
         font-size:10px;
     }
@@ -241,13 +242,19 @@ ul.no-bullets {
        
     }
     .box-1 {
-        font-size:15px
+        p {
+            font-size:13px;
+        }
     }
     .box-2 {
-        font-size:15px
+        p {
+            font-size:13px;
+        }
     }
     .box-3 {
-        font-size:15px
+        p {
+            font-size:13px;
+        }
     }
     .request-btn1{
         font-size:8px;
@@ -268,21 +275,30 @@ ul.no-bullets {
         font-size:5px;
     }
     .stary {
-        font-size:5px;
+        font-size:10px;
        
     }
     .box-1 {
-        font-size:8px;
+        p {
+            font-size:8px;
+        }
+      
     }
     .box-2 {
-        font-size:8px;
+        p {
+            font-size:8px;
+        }
     }
     .box-3 {
-        font-size:8px;
+        p {
+            font-size:8px;
+        }
     }
+    
     .request-btn1{
         font-size:5px;
         height:2.5vh;
+        margin:50px
     }
     .whats-next {
         height:25rem;
@@ -302,7 +318,7 @@ ul.no-bullets {
     .abouth2 {
         font-size:15px;
     }
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 850px) {
         .icon-1x {
 
             height:8vh;
@@ -357,30 +373,22 @@ ul.no-bullets {
 .about-box2 {
     height:50%;
     width:80%;
-    border-style:solid;
+    border-style:outset;
     margin:auto;
     position:relative;
     top:25%;
     border-radius:15px;
     background-color:white;
-    color:black;
+    color:#0074B7;
     font-size:20px;
     text-align: start;
     font-weight:400;
-    box-shadow:
-    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
-    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
-    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
-    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
-    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-    100px 100px 80px rgba(0, 0, 0, 0.07)
-  ;
-
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
    
 
 }
 .abouth2 {
-    color:#0074B7;
+    color:black;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
 }
@@ -422,18 +430,12 @@ ul.no-bullets {
     top:25%;
     border-radius:15px;
     background-color:white;
-    color:black;
+    color:#0074B7;
     font-size:20px;
     text-align: center;
+    border-style:outset;
     font-weight:400;
-    box-shadow:
-    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
-    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
-    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
-    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
-    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
-    100px 100px 80px rgba(0, 0, 0, 0.07)
-  ;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
 .featured {
     height:40vh;
